--- a/less/index.less
+++ b/less/index.less
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5 {
     max-width: 800px;
 }
 
+.btn {
+    background-color: #B0C4DE;
+}
+
 .footer {
     color: black;
     background: blanchedalmond;
